# notebooks

./: README.md  pyproject.toml  simpsons_paradox.py
nlp/: nat_names-lstm.ipynb  translation.ipynb
notebooks/: ETH_fees_from_BQ.ipynb  decode_codeimage.ipynb  logo_countours.ipynb  shape_tracker.py  simpsons_paradox.ipynb  spectral_analysis_task.ipynb  topic_analysis.ipynb
