[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Repo for publishing notebooks"
authors = ["Martin Mokry <martin-kokos@users.noreply.github.com>"]
license = "GNU-LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
jupyterlab = "^3.6.1"
pandas = "^1.5.3"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"
jupyter-nbextensions-configurator = "^0.6.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-nccl-cu11 = "^2.18.3"
matplotlib = "^3.7.3"
pillow = "^10.0.0"
ydata-profiling = "^4.5.1"
bokeh = "^3.2.2"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
line-profiler = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
